--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Uncirtain Days</title>
+<head>
+    <title>Uncertain Days</title>
+    <script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>  
     <script>
-      const websocket = new WebSocket("ws://localhost:3000/");
-      document.addEventListener('keydown', (event) => {
-        if (event.key === 'a' || event.key === 'd') {
-          websocket.send('keydown:' + event.key);
-          console.log('keydown:' + event.key);
-        };
-      });
+        const socket = io();  // Connect to Socket.IO server
+
+        document.addEventListener('keydown', (event) => {
+            if (event.key === 'a' || event.key === 'd') {
+                socket.emit('message', 'keydown:' + event.key);  // Emit a Socket.IO event
+                console.log('keydown:' + event.key);
+            };
+        });
+        document.addEventListener('keyup', (event) => {
+            socket.emit('message', 'keyup');  // Emit a Socket.IO event
+            console.log('keyup');
+        });
+
+        socket.on('connect', () => {
+            console.log('Connected to server');
+        });
+
+        socket.on('disconnect', () => {
+            console.log('Disconnected from server');
+        });
     </script>
-  </head>
-  <body>
-    <h1>hit a/d key</h1>
+</head>
+<body>
+    <h1>Hit A/D key</h1>
     <div class="board"></div>
-  </body>
+</body>
 </html>
